--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
-   <header>
-   </header>
+   <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>PREMIERS PAS AVEC BRACKETS</title>
+        <meta name="description" content="An interactive getting started guide for Brackets.">
+        <link rel="stylesheet" href="main.css">
+   </head>
    <body>
+       <h1>Cours de CMS - Exercice</h1>
    </body>
    <footer>
    </footer>
