--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    </head>
    <body>
        <h1>Cours de CMS - Exercice</h1>
+      <p>Je ne sais pas quoi raconter</p>
    </body>
    <footer>
    </footer>
