--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>PREMIERS PAS AVEC BRACKETS</title>
+        <title>Cours de CMS - Exercice</title>
         <meta name="description" content="An interactive getting started guide for Brackets.">
         <link rel="stylesheet" href="main.css">
    </head>
