--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <body>
        <h1>Cours de CMS - Exercice</h1>
       <p>Je ne sais pas quoi raconter</p>
+      <img src="http://asm-escalade.e-monsite.com/medias/files/escalade.jpg" height="450px" />
    </body>
    <footer>
    </footer>
