--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 ---
 <!DOCTYPE html>
 <html>
-   <title>{{Site.title}}</title>
+   <title>{{site.title}}</title>
    <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
