--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
-   <header>
-   </header>
-   <body>
-   </body>
-   <footer>
-   </footer>
-</html>
+---
+layout: default
+title: Home
+navigation_weight: 1
+---
+
+       <h1>Cours de CMS - Exercice</h1>
+           <p>Je ne sais pas quoi raconter</p>
+      <img src="http://asm-escalade.e-monsite.com/medias/files/escalade.jpg" height="450px" >
+      
